# smp

./: .gitignore  Cargo.toml  README.md  build.rs  compile.sh  deno.json  sgconfig.yml
.cargo/: config.toml
ast-grep/: README.md  avoid-duplicate-export.yml  bad-names.yml
editor/howlite-vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
editor/howlite-vscode/syntaxes/: howlite.tmLanguage.json
editor/tmLanguage/: TmLanguage.d.ts  howlite.tmLanguage.json  howlite.tmLanguage.ts
notes/: links.md  parsing.md  semantics.md  syntax.md
notes/ReedLang/: README.md  ReedLang.rdf
notes/syntax/: capabilities.reed  enumerable.reed  functions.reed  guard.reed  localeffect.reed  modules.reed  numbers.reed  rusty-errors.reed  type-dispatch.reed  types.reed  vars.reed
program-examples/: add.hlt  array.hlt  bad--type.reed  bad-type.hlt  fib.hlt  function.hlt  function.reed  if.hlt  if.reed  inttypes.hlt  miniprogram.reed  ref.hlt  simple.reed  struct.hlt
proposal/: Proposal.typ
proposal/templates/: ams.typ
report/: Slides.odp  build-slide.ts  progress.slides.html  progress.slides.md  progress.typ  refs.bib
scripts/: hltc-compile.sh  hltc-debug-qemu.sh  regen-asts.sh  update-bib.sh
src/: lib.rs  span.rs  typecheck.rs
src/interp/: mod.rs
src/ir/: asmcompiler.rs  compiler.rs  environment.rs  errors.rs  frame.rs  ircompiler.rs  mod.rs  ops.rs  values.rs  vm.rs
src/parser/: ast.rs  cst.rs  errors.rs  grammar.lalrpop  grammar.pest  lalrpop_grammar.rs  lexer.rs  mod.rs  test.rs
src/riscv/: asmgen.rs  compiler.rs  mod.rs  ttcompiler.rs  value.rs
src/typecheck/: errors.rs  mod.rs  typetree.rs
src/typecheck/types/: array.rs  integer.rs  mod.rs  record.rs  tyref.rs
src/util/: ast.rs  bidihashmap.rs  idvec.rs  mod.rs
tests/syntax/: regen-asts.sh
tests/syntax/00_simple/: 00_function.hlt  00_function.json  00_function.s  01_arithmetic.hlt  01_arithmetic.json  01_arithmetic.s  02_scalar-primitives.hlt  02_scalar-primitives.json  02_scalar-primitives.s  03_scope.hlt  03_scope.json  03_scope.s  04_operators.hlt  04_operators.json  04_operators.s  05_bindings.hlt  06_if.hlt  (+11 more)
(+18 files in other folders)
