[package]
name = "howlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = {version = "0.20.0", features = ["lexer", "unicode"] }
petgraph="*"
thiserror = { version = "1.0.56" }

# cli deps
clap = { version = "4.4.8", features= ["derive"], optional = true }
logos = "0.14.0"


[build-dependencies]
lalrpop = "0.20.0"

[features]
cli = ["clap"]

[[bin]]
name = "hltc"
required-features = ["cli"]

[[bin]]
name = "hlti"
required-features = ["cli"]
